# ucx

./: .gitignore
config/m4/: cuda.m4
src/tools/profile/: Makefile.am  profile_to_perfetto.c  profile_utils.c  profile_utils.h  read_profile.c
src/uct/cuda/: Makefile.am
src/uct/cuda/base/: cuda_iface.c  cuda_iface.h  cuda_md.c
src/uct/cuda/cuda_copy/: cuda_copy_iface.c  cuda_copy_iface.h  cuda_copy_md.c  cuda_copy_md.h
src/uct/cuda/cuda_ipc/: cuda_ipc_cache.c  cuda_ipc_ep.c  cuda_ipc_iface.c  cuda_ipc_iface.h  cuda_ipc_md.c  cuda_ipc_md.h
src/uct/ib/base/: ib_md.c
